Add experimental Java 13 support